Update index.html - changed O to o

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div id="menu-items"></div>
     
             <div id= "main-container">
-                <div class="ticket">Your Order</div>
+                <div class="ticket">Your order</div>
                 <div id="container-items"></div>
                 <hr>
                 <div class="total-container">
